--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Arduino library for reading voltage of the Seeed Studio NRF52480 BLE (S
 paragraph=Arduino library for reading voltage of the Seeed Studio NRF52480 BLE (Sense) battery and set the charge current
 category=Other
 url=https://github.com/Maaajaaa/SeeedNrf52480Battery/
-architectures=nrf52
+architectures=nrf52, mbed
 includes=SeeedNrf52480Battery.h
