--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Majas SeeedNrf52480Battery
-version=0.1
+name=Nrf52Bat
+version=1.0.0
 author=Maja Männel
 maintainer=Maja <maaajaaa@maaajaaa.de>
-sentence=Arduino library for reading voltage of the Seeed Studio NRF52480 BLE (Sense) battery and set the charge current
-paragraph=Arduino library for reading voltage of the Seeed Studio NRF52480 BLE (Sense) battery and set the charge current
+sentence=Arduino library for battery management on the Seeed Studio NRF52480 BLE (Sense)
+paragraph=read voltage, percentage and set charge current
 category=Other
-url=https://github.com/Maaajaaa/SeeedNrf52480Battery/
+url=https://github.com/Maaajaaa/Nrf52Bat/
 architectures=nrf52, mbed
-includes=SeeedNrf52480Battery.h
+includes=Nrf52Bat.h
