--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=Nrf52Bat
-version=1.0.0
+name=SeeedNrf52480Battery
+version=1.0.1
 author=Maja Männel
 maintainer=Maja <maaajaaa@maaajaaa.de>
 sentence=Arduino library for battery management on the Seeed Studio NRF52480 BLE (Sense)
@@ -7,4 +7,4 @@ paragraph=read voltage, percentage and set charge current
 category=Other
 url=https://github.com/Maaajaaa/Nrf52Bat/
 architectures=nrf52, mbed
-includes=Nrf52Bat.h
+includes=SeeedNrf52480Battery.h
